# colcon-pkg-config

./: .travis.yml  README.rst  appveyor.yml  setup.cfg  setup.py  stdeb.cfg
colcon_pkg_config/: __init__.py
colcon_pkg_config/environment/: pkg_config.py
test/: spell_check.words  test_flake8.py  test_spell_check.py
