[metadata]
name = colcon-pkg-config
version = attr: colcon_pkg_config.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-pkg-config/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-pkg-config/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon adding an environment variable to find pkg-config files.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
filterwarnings =
    error
junit_suite_name = colcon-pkg-config

[options.entry_points]
colcon_core.environment =
    pkg_config = colcon_pkg_config.environment.pkg_config:PkgConfigEnvironment

[flake8]
import-order-style = google
